recursion.logo.lessons.recursion.logo.koch.Crab.scala.error
Crab:6: error: not found: value mat
    crab(levels-1,length/mat.sqrt(2))
                         ^Crab:8: error: not found: value mat
    crab(levels-1,length/mat.sqrt(2))
                         ^