recursion.logo.lessons.recursion.logo.koch.Crab.scala.code
def crab(levels:Int, length:Double) {
  if (levels==0) {
    avance(length)
  } else {
    gauche(45)
    crab(levels-1,length/mat.sqrt(2))
    droite(90)
    crab(levels-1,length/mat.sqrt(2))
    gauche(45)
  }
}